# ebac_bookstore

./: Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
bookstore/: settings.py  urls.py
order/migrations/: 0001_initial.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/migrations/: 0001_initial.py
product/tests/test_viewsets/: test_product_viewset.py
