[tool.poetry]
name = "ebac-bookstore"
version = "0.1.0"
description = ""
authors = ["Alexandre Vidal <161221123+arvidalpython@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ebac_bookstore"}]

[tool.poetry.dependencies]
python = ">=3.12"
Django = ">=4.2,<5.0"
djangorestframework = "^3.16.1"
django-extensions = "^3.1.3"
django-debug-toolbar = "^3.2.2"
psycopg2-binary = "^2.9.2"
autopep8 = "^1.6.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
factory-boy = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"